[package]
name = "rustphp"
version = "0.0.3"
edition = "2024"
authors = ["Otabek"]

[lib]
crate-type = ["cdylib"]

[dependencies]
ext-php-rs = "*"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
blake3 = "1.5"
hmac = "0.12"
rand = "0.8"
base64 = "0.22"
aes-gcm = "0.10"
hex = "0.4"
jsonwebtoken = "9"
argon2 = "0.5"
ring = "0.17"
ed25519-dalek = "2"
chacha20poly1305 = "0.10"
hkdf = "0.12"
rand_core = "0.6"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls", "gzip", "multipart" , "brotli", "cookies", "deflate"] }
mysql = "24"
rayon = "1.10"

[profile.release]
strip = "debuginfo"
